Support fading between backgrounds. Bug #552859, patch by Ray Strode.
2009-01-20  Cosimo Cecchi  <cosimoc@gnome.org>

	* eel-background.c: (on_bg_changed), (on_bg_transitioned),
	(eel_background_init), (free_fade), (eel_background_finalize),
	(set_root_pixmap), (fade_to_pixmap),
	(eel_background_set_up_widget), (on_background_changed),
	(init_fade), (eel_widget_queue_background_change),
	(widget_style_set_cb), (widget_realized_setup),
	(on_widget_destroyed), (eel_get_widget_background):
	Support fading between backgrounds.
	Bug #552859, patch by Ray Strode.

svn path=/trunk/; revision=14869

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2009-01-20  Cosimo Cecchi  <cosimoc@gnome.org>
+
+	* src/nautilus-window-slot.c: (nautilus_window_slot_dispose):
+	Fix a crash when closing a window before it's fully populated.
+	Part of bug #552859, patch by Ray Strode.
+
 2009-01-19  Alexander Larsson  <alexl@redhat.com>
 
 	* configure.in:
