we require gnome-desktop 2.25.5 now, due to the new GnomeBG crossfade API.
2009-01-20  Cosimo Cecchi  <cosimoc@gnome.org>

	* configure.in: we require gnome-desktop 2.25.5 now, due to the new
	GnomeBG crossfade API.

svn path=/trunk/; revision=14870

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2009-01-20  Cosimo Cecchi  <cosimoc@gnome.org>
 
+	* configure.in: we require gnome-desktop 2.25.5 now, due to the new
+	GnomeBG crossfade API.
+
+2009-01-20  Cosimo Cecchi  <cosimoc@gnome.org>
+
 	* src/nautilus-window-slot.c: (nautilus_window_slot_dispose):
 	Fix a crash when closing a window before it's fully populated.
 	Part of bug #552859, patch by Ray Strode.
