--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2009-01-20  A. Walton  <awalton@gnome.org>
+
+	* src/nautilus-main.c (main):
+	Bug 568503 – Misspelled word "progam"->"program"
+
 2009-01-20  Cosimo Cecchi  <cosimoc@gnome.org>
 
 	* configure.in: we require gnome-desktop 2.25.5 now, due to the new
