Bug 568503 – Misspelled word "progam"->"program" Fixing message ids.
2009-01-21  A. Walton  <awalton@gnome.org>

	* cs.po:
	* de.po:
	* es.po:
	* et.po:
	* eu.po:
	* fr.po:
	* ha.po:
	* he.po:
	* hu.po:
	* ig.po:
	* it.po:
	* nb.po:
	* sk.po:
	* sl.po:
	* sr.po:
	* sr@latin.po:
	* sv.po:
	* uz.po:
	* uz@cyrillic.po:
	* yo.po:
	Bug 568503 – Misspelled word "progam"->"program"
	Fixing message ids.


svn path=/trunk/; revision=14872

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,28 @@
+2009-01-21  A. Walton  <awalton@gnome.org>
+
+	* cs.po:
+	* de.po:
+	* es.po:
+	* et.po:
+	* eu.po:
+	* fr.po:
+	* ha.po:
+	* he.po:
+	* hu.po:
+	* ig.po:
+	* it.po:
+	* nb.po:
+	* sk.po:
+	* sl.po:
+	* sr.po:
+	* sr@latin.po:
+	* sv.po:
+	* uz.po:
+	* uz@cyrillic.po:
+	* yo.po:
+	Bug 568503 – Misspelled word "progam"->"program"
+	Fixing message ids.
+
 === nautilus 2.25.3 ===
 
 2009-01-17  Thomas Thurman  <tthurman@gnome.org>
