--- a/po/cs.po
+++ b/po/cs.po
@@ -5576,7 +5576,7 @@ msgstr "Provést rychlou sadu kontrol sebe sama."
 
 #: ../src/nautilus-main.c:329
 #, fuzzy
-msgid "Show the version of the progam."
+msgid "Show the version of the program."
 msgstr "Oprávnění souboru."
 
 #: ../src/nautilus-main.c:331
