--- a/po/de.po
+++ b/po/de.po
@@ -5912,7 +5912,7 @@ msgid "Perform a quick set of self-check tests."
 msgstr "Einen Satz schnelle Selbsttests durchführen."
 
 #: ../src/nautilus-main.c:329
-msgid "Show the version of the progam."
+msgid "Show the version of the program."
 msgstr "Die Versionsnummer des Programms anzeigen."
 
 #: ../src/nautilus-main.c:331
