--- a/po/es.po
+++ b/po/es.po
@@ -6365,7 +6365,7 @@ msgstr "Realiza un conjunto rápido de auto-verificaciones."
 
 # src/file-manager/fm-properties-window.c:1641
 #: ../src/nautilus-main.c:329
-msgid "Show the version of the progam."
+msgid "Show the version of the program."
 msgstr "Mostrar la versión del programa."
 
 #: ../src/nautilus-main.c:331
