--- a/po/et.po
+++ b/po/et.po
@@ -5742,7 +5742,7 @@ msgid "Perform a quick set of self-check tests."
 msgstr "Kiirete enesetestide läbiviimine."
 
 #: ../src/nautilus-main.c:329
-msgid "Show the version of the progam."
+msgid "Show the version of the program."
 msgstr "Programmi versiooni näitamine."
 
 #: ../src/nautilus-main.c:331
