--- a/po/eu.po
+++ b/po/eu.po
@@ -5774,7 +5774,7 @@ msgid "Perform a quick set of self-check tests."
 msgstr "Burutu auto-egiaztapen proba azkarrak."
 
 #: ../src/nautilus-main.c:329
-msgid "Show the version of the progam."
+msgid "Show the version of the program."
 msgstr "Erakutsi programaren bertsioa."
 
 #: ../src/nautilus-main.c:331
