--- a/po/fr.po
+++ b/po/fr.po
@@ -5843,7 +5843,7 @@ msgid "Perform a quick set of self-check tests."
 msgstr "Effectue des rapides tests de cohérence."
 
 #: ../src/nautilus-main.c:329
-msgid "Show the version of the progam."
+msgid "Show the version of the program."
 msgstr "Affiche la version du programme."
 
 #: ../src/nautilus-main.c:331
