--- a/po/ha.po
+++ b/po/ha.po
@@ -6557,7 +6557,7 @@ msgstr "Ka gwada wani jeri na jarraba-kanka mai sauri."
 
 #: ../src/nautilus-main.c:329
 #, fuzzy
-msgid "Show the version of the progam."
+msgid "Show the version of the program."
 msgstr "Izini na fayil."
 
 #: ../src/nautilus-main.c:331
