--- a/po/he.po
+++ b/po/he.po
@@ -5594,7 +5594,7 @@ msgid "Perform a quick set of self-check tests."
 msgstr "Perform a quick set of self-check tests."
 
 #: ../src/nautilus-main.c:329
-msgid "Show the version of the progam."
+msgid "Show the version of the program."
 msgstr "Show the version of the progam."
 
 #: ../src/nautilus-main.c:331
