--- a/po/hu.po
+++ b/po/hu.po
@@ -5730,7 +5730,7 @@ msgid "Perform a quick set of self-check tests."
 msgstr "Néhány gyors ellenőrzőrutin futtatása."
 
 #: ../src/nautilus-main.c:329
-msgid "Show the version of the progam."
+msgid "Show the version of the program."
 msgstr "A program verziószámának megjelenítése."
 
 #: ../src/nautilus-main.c:331
