--- a/po/ig.po
+++ b/po/ig.po
@@ -5886,7 +5886,7 @@ msgstr "Mee nhazi ọsịsọ nke nnwale-nkeonwe."
 
 #: ../src/nautilus-main.c:329
 #, fuzzy
-msgid "Show the version of the progam."
+msgid "Show the version of the program."
 msgstr "Ikikere nke faịlụ ahụ."
 
 #: ../src/nautilus-main.c:331
