--- a/po/it.po
+++ b/po/it.po
@@ -6222,7 +6222,7 @@ msgstr "Effettua un rapido insieme di test diagnostici."
 
 # GNOME-2-26
 #: ../src/nautilus-main.c:329
-msgid "Show the version of the progam."
+msgid "Show the version of the program."
 msgstr "Mostra la versione del programma."
 
 #: ../src/nautilus-main.c:331
