--- a/po/nb.po
+++ b/po/nb.po
@@ -5681,7 +5681,7 @@ msgid "Perform a quick set of self-check tests."
 msgstr "Utfør et raskt sett med selvsjekk-tester."
 
 #: ../src/nautilus-main.c:331
-msgid "Show the version of the progam."
+msgid "Show the version of the program."
 msgstr "Vis versjonen av programmet."
 
 #: ../src/nautilus-main.c:333
