--- a/po/sk.po
+++ b/po/sk.po
@@ -5802,7 +5802,7 @@ msgstr "Vykonať rýchlu sadu testov."
 
 #: ../src/nautilus-main.c:329
 #, fuzzy
-msgid "Show the version of the progam."
+msgid "Show the version of the program."
 msgstr "Práva súboru."
 
 #: ../src/nautilus-main.c:331
