--- a/po/sl.po
+++ b/po/sl.po
@@ -5349,7 +5349,7 @@ msgid "Perform a quick set of self-check tests."
 msgstr "Opravi hitra samo-preverjanja."
 
 #: ../src/nautilus-main.c:329
-msgid "Show the version of the progam."
+msgid "Show the version of the program."
 msgstr "Pokaži različico programa."
 
 #: ../src/nautilus-main.c:331
