--- a/po/sr.po
+++ b/po/sr.po
@@ -5641,7 +5641,7 @@ msgstr "Спроведи скуп брзих самопровера."
 
 #: ../src/nautilus-main.c:329
 #, fuzzy
-msgid "Show the version of the progam."
+msgid "Show the version of the program."
 msgstr "Овлашћења датотеке."
 
 #: ../src/nautilus-main.c:331
