--- a/po/sr@latin.po
+++ b/po/sr@latin.po
@@ -5645,7 +5645,7 @@ msgstr "Sprovedi skup brzih samoprovera."
 
 #: ../src/nautilus-main.c:329
 #, fuzzy
-msgid "Show the version of the progam."
+msgid "Show the version of the program."
 msgstr "Ovlašćenja datoteke."
 
 #: ../src/nautilus-main.c:331
