--- a/po/sv.po
+++ b/po/sv.po
@@ -5248,7 +5248,7 @@ msgid "Perform a quick set of self-check tests."
 msgstr "Utför ett antal snabba självtester."
 
 #: ../src/nautilus-main.c:329
-msgid "Show the version of the progam."
+msgid "Show the version of the program."
 msgstr "Visa versionen för programmet."
 
 #: ../src/nautilus-main.c:331
