--- a/po/uz@cyrillic.po
+++ b/po/uz@cyrillic.po
@@ -5161,7 +5161,7 @@ msgid "Perform a quick set of self-check tests."
 msgstr "Тезда ўз-ўзини текширишни амалга ошириш."
 
 #: ../src/nautilus-main.c:329
-msgid "Show the version of the progam."
+msgid "Show the version of the program."
 msgstr "Дастур версиясини кўрсатиш."
 
 #: ../src/nautilus-main.c:331
