--- a/po/yo.po
+++ b/po/yo.po
@@ -5874,7 +5874,7 @@ msgstr "Sáré ṣe àwọn àyẹ̀wò ayẹ̀ra-ẹni-wò"
 
 #: ../src/nautilus-main.c:329
 #, fuzzy
-msgid "Show the version of the progam."
+msgid "Show the version of the program."
 msgstr "Àwọn ìyànda fáìlì náà."
 
 #: ../src/nautilus-main.c:331
