--- a/po/uz.po
+++ b/po/uz.po
@@ -5161,7 +5161,7 @@ msgid "Perform a quick set of self-check tests."
 msgstr "Tezda oʻz-oʻzini tekshirishni amalga oshirish."
 
 #: ../src/nautilus-main.c:329
-msgid "Show the version of the progam."
+msgid "Show the version of the program."
 msgstr "Dastur versiyasini koʻrsatish."
 
 #: ../src/nautilus-main.c:331
