--- a/eel/ChangeLog
+++ b/eel/ChangeLog
@@ -1,3 +1,10 @@
+2009-01-21  A. Walton  <awalton@gnome.org>
+
+	* eel-debug-drawing.c (eel_debug_show_pixbuf_in_external_viewer):
+	Bug #568630: eel should use mkstemp() instead of mktemp()
+	mktemp() is deprecated and should not be used.
+	Patch by Jasper Lievisse Adriaanse.
+
 2009-01-20  Cosimo Cecchi  <cosimoc@gnome.org>
 
 	* eel-background.c: (on_bg_changed), (on_bg_transitioned),
