--- a/eel/ChangeLog
+++ b/eel/ChangeLog
@@ -1,3 +1,8 @@
+2009-01-22  A. Walton  <awalton@gnome.org>
+
+	* eel-debug-drawing.c (eel_debug_show_pixbuf_in_external_viewer):
+	Use g_mkstemp() instead of mkstemp(). Pointed out by Paolo Borelli.
+
 2009-01-21  A. Walton  <awalton@gnome.org>
 
 	* eel-debug-drawing.c (eel_debug_show_pixbuf_in_external_viewer):
