--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2009-01-22  Cosimo Cecchi  <cosimoc@gnome.org>
+
+        * MAINTAINERS: fix a typo.
+
 2009-01-22  A. Walton  <awalton@gnome.org>
 
 	* libnautilus-private/nautilus-file-utilities.c
