libnautilus-private/nautilus-file-private.c (finalize): free the
2009-01-22  Paolo Borelli  <pborelli@katamail.com>

	libnautilus-private/nautilus-file-private.c (finalize): free the
	description.


svn path=/trunk/; revision=14882

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2009-01-22  Paolo Borelli  <pborelli@katamail.com>
+
+	libnautilus-private/nautilus-file-private.c (finalize): free the
+	description.
+
 2009-01-22  Cosimo Cecchi  <cosimoc@gnome.org>
 
         * libnautilus-private/nautilus-icon-container.c:
