--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2009-01-22  A. Walton  <awalton@gnome.org>
+
+	* libnautilus-private/nautilus-file.c (nautilus_file_clear_info):
+	Also free the description when clearing the file.
+
 2009-01-22  Paolo Borelli  <pborelli@katamail.com>
 
 	libnautilus-private/nautilus-file-private.c (finalize): free the
