--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2009-01-23  Cosimo Cecchi  <cosimoc@gnome.org>
+
+	* src/nautilus-window-menus.c
+	(menu_item_select_cb): don't rely on GTK+ implementation details
+	when getting a GtkAction.
+	Thanks to Christian Persch (#568880).
+
 2009-01-22  A. Walton  <awalton@gnome.org>
 
 	* libnautilus-private/nautilus-file.c (nautilus_file_clear_info):
