Updated Latvian translation.
2009-01-24  Raivis DEjus  <orvils@gmail.com>

	* lv.po: Updated Latvian translation.


svn path=/trunk/; revision=14885

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2009-01-24  Raivis DEjus  <orvils@gmail.com>
+
+	* lv.po: Updated Latvian translation.
+
 2009-01-21  A. Walton  <awalton@gnome.org>
 
 	* cs.po:
