--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2009-01-25  Andre Klapper  <a9016009@gmx.de>
+
+	* de.po: Updated German translation.
+
 2009-01-24  Raivis DEjus  <orvils@gmail.com>
 
 	* lv.po: Updated Latvian translation.
