set X-GNOME-AutoRestart=true, to make Nautilus restart automatically when
2009-01-27  Cosimo Cecchi  <cosimoc@gnome.org>

	* nautilus.desktop.in.in: set X-GNOME-AutoRestart=true, to make
	Nautilus restart automatically when it crashes (#569288).

svn path=/trunk/; revision=14888

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2009-01-27  Cosimo Cecchi  <cosimoc@gnome.org>
+
+	* nautilus.desktop.in.in: set X-GNOME-AutoRestart=true, to make
+	Nautilus restart automatically when it crashes (#569288).
+
 2009-01-23  Cosimo Cecchi  <cosimoc@gnome.org>
 
 	* src/nautilus-window-menus.c
