Brazilian Portuguese translation updated by Fabrício Godoy.
2009-01-27  Jonh Wendell  <jwendell@gnome.org>

	* pt_BR.po: Brazilian Portuguese translation updated by Fabrício Godoy.


svn path=/trunk/; revision=14889

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2009-01-27  Jonh Wendell  <jwendell@gnome.org>
+
+	* pt_BR.po: Brazilian Portuguese translation updated by Fabrício Godoy.
+
 2009-01-25  Andre Klapper  <a9016009@gmx.de>
 
 	* de.po: Updated German translation.
