Remove "note-indicator.png" and use the themable icon we just added to
2009-01-28  Cosimo Cecchi  <cosimoc@pluto>

	* icons/Makefile.am:
	* src/nautilus-notes-viewer.c: (nautilus_notes_viewer_init):
	Remove "note-indicator.png" and use the themable icon we just
	added to display the emblem in the sidebar.

svn path=/trunk/; revision=14892

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2009-01-28  Cosimo Cecchi  <cosimoc@pluto>
+
+	* icons/Makefile.am:
+	* src/nautilus-notes-viewer.c: (nautilus_notes_viewer_init):
+	Remove "note-indicator.png" and use the themable icon we just
+	added to display the emblem in the sidebar.
+
 2009-01-28  Cosimo Cecchi  <cosimoc@gnome.org>
 
 	* data/icons/*:
