Updated zh_CN translation.
svn path=/trunk/; revision=14894

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2009-01-29  Funda Wang  <fundawang@gmail.com>
+
+	* zh_CN.po: Updated zh_CN translation.
+
 2009-01-27  Jonh Wendell  <jwendell@gnome.org>
 
 	* pt_BR.po: Brazilian Portuguese translation updated by Fabrício Godoy.
