--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2009-01-29  Jovan Naumovski <jovan@lugola.net>
+
+	* mk.po: Bug fix for #569495.
+
 2009-01-29  Funda Wang  <fundawang@gmail.com>
 
 	* zh_CN.po: Updated zh_CN translation.
