Bug fix for #569503
svn path=/trunk/; revision=14896

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2009-01-29  Sandeep Shedmake  <sshedmak@redhat.com>
+
+	* mr.po: Bug fix for #569503.
+
 2009-01-29  Jovan Naumovski <jovan@lugola.net>
 
 	* mk.po: Bug fix for #569495.
