--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2009-01-30  Jorge Gonzalez  <jorgegonz@svn.gnome.org>
+
+	* es.po: Updated Spanish translation.
+
 2009-01-30  Ilkka Tuohela <hile@iki.fi>
 
 	* fi.po: Updated Finnish translation.
