remove this, it's useless now that we don't use Bonobo anymore (#570125).
2009-02-01  Cosimo Cecchi  <cosimoc@gnome.org>

	* src/Nautilus_shell.server.in: remove this, it's useless now that
	we don't use Bonobo anymore (#570125).

svn path=/trunk/; revision=14906

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2009-02-01  Cosimo Cecchi  <cosimoc@gnome.org>
+
+	* src/Nautilus_shell.server.in: remove this, it's useless now that
+	we don't use Bonobo anymore (#570125).
+
 2009-01-31  Cosimo Cecchi  <cosimoc@gnome.org>
 
 	* libnautilus-private/nautilus-directory-async.c (lacks_link_info),
