Update for release
2009-02-02  Alexander Larsson  <alexl@redhat.com>

	* NEWS:
	Update for release


svn path=/trunk/; revision=14908

--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,9 @@
+Major changes in 2.25.4 are:
+* Don't show desktop files from other desktops than Gnome on the desktop
+* Support crossfades of desktop backgrounds
+* Don't snap desktop icons outside right margin
+* Fix crashes and leaks
+
 Major changes in 2.25.3 are:
 * Remove CD/DVD creator from places menu and sidebar
 * Allow deleting custom emblems
