--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2009-02-02  Alexander Larsson  <alexl@redhat.com>
+
+	* NEWS:
+	Update for release
+
 2009-02-02  Cosimo Cecchi  <cosimoc@gnome.org>
 
 	* libnautilus-private/nautilus-file-operations.c
