--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,12 @@
 2009-02-02  Alexander Larsson  <alexl@redhat.com>
 
+	* configure.in:
+	Post release version bump
+
+=== nautilus 2.25.4 ===
+
+2009-02-02  Alexander Larsson  <alexl@redhat.com>
+
 	* NEWS:
 	Update for release
 
