--- a/eel/ChangeLog
+++ b/eel/ChangeLog
@@ -1,3 +1,5 @@
+=== nautilus 2.25.4 ===
+
 2009-01-28  Cosimo Cecchi  <cosimoc@gnome.org>
 
 	* eel-editable-label.c: (eel_editable_label_move_cursor):
