Updated Spanish translation
svn path=/trunk/; revision=14912

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2009-02-02  Jorge Gonzalez  <jorgegonz@svn.gnome.org> 
+
+	* es.po: Updated Spanish translation.
+
 === nautilus 2.25.4 ===
 
 2009-01-31  Daniel Nylander <po@danielnylander.se>
