--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2009-02-03  Manoj Kumar Giri <mgiri@redhat.com>
+
+	* or.po: Updated Oriya Translation.
+
 2009-02-02  Jorge Gonzalez  <jorgegonz@svn.gnome.org> 
 
 	* es.po: Updated Spanish translation.
