--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2009-02-04  Manoj Kumar Giri  <mgiri@redhat.com>
+
+	* or.po: Updated Oriya Translation.
+
 2009-02-04  Runa Bhattachajee  <runab@redhat.com>
 
 	* bn_IN.po: Updated the gconf values wrt bug #569497
