--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2008-06-25  Christian Kirbach  <Christian.Kirbach@googlemail.com>
+
+	* de.po: Updated German translation.
+
 2009-02-04  Manoj Kumar Giri  <mgiri@redhat.com>
 
 	* or.po: Updated Oriya Translation.
