--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2009-02-06  A. Walton  <awalton@gnome.org>
+
+	* libnautilus-private/nautilus-link.c (get_language),
+	(nautilus_link_local_set_key):
+	Pass a language code to g_key_file_set_locale_string() so that we can
+	actually rename .desktop files.
+
 2009-02-04  Cosimo Cecchi  <cosimoc@gnome.org>
 
 	* src/nautilus-application.c: (create_window):
