--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2009-02-07   Clytie Siddall <clytie@riverland.net.au>
+
+	* vi.po: Updated Vietnamese translation.
+
 2008-06-25  Christian Kirbach  <Christian.Kirbach@googlemail.com>
 
 	* de.po: Updated German translation.
