Updated Serbian translation wrt bug #570838
svn path=/trunk/; revision=14925

--- a/po/sr.po
+++ b/po/sr.po
@@ -1896,7 +1896,7 @@ msgstr[3] "У смећу је остала %'d датотека"
 
 #: ../libnautilus-private/nautilus-file-operations.c:1692
 msgid "Cannot move file to trash, do you want to delete immediately?"
-msgstr "Не могу да пребацим „%s“ у смеће, желите ли да га одмах обришете?"
+msgstr "Не могу да пребацим датотеку у смеће, желите ли да је одмах обришете?"
 
 #: ../libnautilus-private/nautilus-file-operations.c:1693
 msgid "The file \"%B\" cannot be moved to the trash."
