Updated Serbian translation wrt bug #570838
svn path=/branches/gnome-2-24/; revision=14927

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2009-02-07  Goran Rakić  <grakic@devbase.net>
+
+	* sr.po, sr@latin.po: Updated Serbian translation wrt bug #570838.
+
 2008-12-07  Mario Blättermann  <mariobl@svn.gnome.org>
 
 	* de.po: Fixed some errors in German translation.
