--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2009-02-09  Takeshi AIHANA <takeshi.aihana@gmail.com>
+
+	* ja.po: Updated Japanese translation.
+
 2009-02-07   Goran Rakić <grakic@devbase.net>
 
 	* sr.po, sr@latin.po: Updated Serbian translation wrt bug #570838.
