--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,19 @@
+2009-02-09  Thomas H.P. Andersen  <phomes@gmail.com>
+
+	* src/file-manager/fm-empty-view.c: (fm_empty_view_add_file):
+	* src/file-manager/fm-directory-view.c: (connect_proxy):
+	* src/nautilus-spatial-window.c:
+	(got_file_info_for_location_menu_callback),
+	(nautilus_spatial_window_set_location_button):
+	* src/nautilus-property-browser.c: (make_drag_image),
+	(make_color_drag_image):
+	* src/nautilus-bookmarks-window.c: (update_bookmark_from_text):
+	* libnautilus-private/nautilus-icon-canvas-item.c:
+	(nautilus_icon_canvas_item_get_image):
+	* libnautilus-private/nautilus-thumbnails.c:
+	(async_thumbnail_read_image):
+	Don't use deprecated gdk_pixbuf_unref. Bug #570953
+
 2009-02-06  A. Walton  <awalton@gnome.org>
 
 	* libnautilus-private/nautilus-link.c (get_language),
