--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2009-02-10  Daniel Nylander <po@danielnylander.se>
+
+	* sv.po: Updated Swedish translation.
+
 2009-02-10  Gil Forcada  <gforcada@gnome.org>
 
 	* ast.po: Updated Asturian translation on behalf of Mikel González.
