--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2009-02-12  Sweta Kothari  <swkothar@redhat.com>
+
+	* gu.po: Committed Gujarati Translation.
+
 2009-02-11  Jonh Wendell  <jwendell@gnome.org>
 
 	* pt_BR.po: Updated Brazilian Portuguese translation.
